part-1/practice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-svc 
spec:
  type: ClusterIP
  selector:
    app: images 
  ports:
  - port: 2345 
    protocol: TCP
    targetPort: 3000
